--- a/public/bootstrap/css/amelia.bootstrap.css
+++ b/public/bootstrap/css/amelia.bootstrap.css
@@ -326,13 +326,13 @@ textarea {
 }
 
 a {
-  color: #e8d069;
+  color: #000000;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #debb27;
+  color: #000000;
   text-decoration: underline;
 }
 
@@ -377,7 +377,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #d7a75a;
+  border-top: 1px solid #000000;
 }
 
 .sr-only {
@@ -1812,8 +1812,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .form-control:focus {
   border-color: #e38343;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 255, 255, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 255, 255, 0.6);
 }
 
 .form-control[disabled],
@@ -1946,7 +1946,7 @@ textarea.input-lg {
 
 .has-warning .input-group-addon {
   color: #ffffff;
-  background-color: #debb27;
+  background-color: #ffffff;
   border-color: #ffffff;
 }
 
@@ -2237,8 +2237,8 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-warning {
   color: #ffffff;
-  background-color: #debb27;
-  border-color: #debb27;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .btn-warning:hover,
@@ -2247,8 +2247,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-warning.active,
 .open .dropdown-toggle.btn-warning {
   color: #ffffff;
-  background-color: #bfa01d;
-  border-color: #ad911a;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .btn-warning:active,
@@ -4069,7 +4069,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav-tabs > li > a:hover {
-  border-color: transparent transparent #15b5c1;
+  border-color: transparent transparent #000000;
 }
 
 .nav-tabs > li.active > a,
@@ -4816,8 +4816,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #debb27;
-  border-color: #b6991c;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .navbar-inverse .navbar-brand {
@@ -4841,14 +4841,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #ffffff;
-  background-color: #e5c953;
+  background-color: #000000;
 }
 
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #ffffff;
-  background-color: #e5c953;
+  background-color: #000000;
 }
 
 .navbar-inverse .navbar-nav > .disabled > a,
@@ -4859,12 +4859,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-toggle {
-  border-color: #e5c953;
+  border-color: #000000;
 }
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #e5c953;
+  background-color: #000000;
 }
 
 .navbar-inverse .navbar-toggle .icon-bar {
@@ -4873,14 +4873,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #c3a41e;
+  border-color: #000000;
 }
 
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
   color: #ffffff;
-  background-color: #e5c953;
+  background-color: #000000;
 }
 
 .navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
@@ -4910,13 +4910,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #ffffff;
-    background-color: #e5c953;
+    background-color: #000000;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ffffff;
-    background-color: #e5c953;
+    background-color: #000000;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -5214,12 +5214,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-warning {
-  background-color: #debb27;
+  background-color: #232424;
 }
 
 .label-warning[href]:hover,
 .label-warning[href]:focus {
-  background-color: #b6991c;
+  background-color: #232424;
 }
 
 .label-danger {
@@ -5242,7 +5242,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #ad1d28;
+  background-color: rgb(29, 30, 30);
   border-radius: 10px;
 }
 
@@ -5782,7 +5782,7 @@ a.list-group-item:focus {
 .panel-footer {
   padding: 10px 15px;
   background-color: #363bca;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #7c0d5b;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -6077,7 +6077,7 @@ body.modal-open,
   padding: 19px 20px 20px;
   margin-top: 15px;
   text-align: right;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #7c0d66;
 }
 
 .modal-footer:before,
